# serializer version: 1
# name: test_publish_example_dry_run
  dict({
    'exit_code': 0,
    'stderr': '''
      Publishing 1 target to https://test.pypi.org/legacy/...
      Publishing 'example-97db95eb'...
      Published 'example_97db95eb-0.0.0.tar.gz'
      Published 'example_97db95eb_a-1.0.0-py3-none-any.whl'
      Published 'example_97db95eb_a-1.0.0.tar.gz'
      Published 'example_97db95eb_b-1.0.0-py3-none-any.whl'
      Published 'example_97db95eb_b-1.0.0.tar.gz'
      Published 'example_97db95eb_b-2.0.0-py3-none-any.whl'
      Published 'example_97db95eb_b-2.0.0.tar.gz'
      Published 'example_97db95eb_b-3.0.0-py3-none-any.whl'
      Published 'example_97db95eb_b-3.0.0.tar.gz'
  
    ''',
    'stdout': '''
      Would execute: twine upload --repository-url https://test.pypi.org/legacy/ [DISTDIR]/example_97db95eb-0.0.0.tar.gz
      Would execute: twine upload --repository-url https://test.pypi.org/legacy/ [DISTDIR]/example_97db95eb_a-1.0.0-py3-none-any.whl
      Would execute: twine upload --repository-url https://test.pypi.org/legacy/ [DISTDIR]/example_97db95eb_a-1.0.0.tar.gz
      Would execute: twine upload --repository-url https://test.pypi.org/legacy/ [DISTDIR]/example_97db95eb_b-1.0.0-py3-none-any.whl
      Would execute: twine upload --repository-url https://test.pypi.org/legacy/ [DISTDIR]/example_97db95eb_b-1.0.0.tar.gz
      Would execute: twine upload --repository-url https://test.pypi.org/legacy/ [DISTDIR]/example_97db95eb_b-2.0.0-py3-none-any.whl
      Would execute: twine upload --repository-url https://test.pypi.org/legacy/ [DISTDIR]/example_97db95eb_b-2.0.0.tar.gz
      Would execute: twine upload --repository-url https://test.pypi.org/legacy/ [DISTDIR]/example_97db95eb_b-3.0.0-py3-none-any.whl
      Would execute: twine upload --repository-url https://test.pypi.org/legacy/ [DISTDIR]/example_97db95eb_b-3.0.0.tar.gz
      example-97db95eb
  
    ''',
  })
# ---
# name: test_publish_example_no_credentials
  dict({
    'exit_code': 1,
    'stderr': '''
      No credentials found for publish!
      Provide an API token via `PACKSE_PUBLISH_PASSWORD` or disable authentication with `--anonymous`.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_publish_example_no_username_defaults_to_token
  dict({
    'exit_code': 0,
    'stderr': '''
      Publishing 1 target to https://test.pypi.org/legacy/...
      Publishing 'example-97db95eb'...
      Published example_97db95eb-0.0.0.tar.gz in [TIME]:
      
          <mock twine logs>
      
      Published 'example_97db95eb-0.0.0.tar.gz'
      Published example_97db95eb_a-1.0.0-py3-none-any.whl in [TIME]:
      
          <mock twine logs>
      
      Published 'example_97db95eb_a-1.0.0-py3-none-any.whl'
      Published example_97db95eb_a-1.0.0.tar.gz in [TIME]:
      
          <mock twine logs>
      
      Published 'example_97db95eb_a-1.0.0.tar.gz'
      Published example_97db95eb_b-1.0.0-py3-none-any.whl in [TIME]:
      
          <mock twine logs>
      
      Published 'example_97db95eb_b-1.0.0-py3-none-any.whl'
      Published example_97db95eb_b-1.0.0.tar.gz in [TIME]:
      
          <mock twine logs>
      
      Published 'example_97db95eb_b-1.0.0.tar.gz'
      Published example_97db95eb_b-2.0.0-py3-none-any.whl in [TIME]:
      
          <mock twine logs>
      
      Published 'example_97db95eb_b-2.0.0-py3-none-any.whl'
      Published example_97db95eb_b-2.0.0.tar.gz in [TIME]:
      
          <mock twine logs>
      
      Published 'example_97db95eb_b-2.0.0.tar.gz'
      Published example_97db95eb_b-3.0.0-py3-none-any.whl in [TIME]:
      
          <mock twine logs>
      
      Published 'example_97db95eb_b-3.0.0-py3-none-any.whl'
      Published example_97db95eb_b-3.0.0.tar.gz in [TIME]:
      
          <mock twine logs>
      
      Published 'example_97db95eb_b-3.0.0.tar.gz'
  
    ''',
    'stdout': '''
      example-97db95eb
  
    ''',
  })
# ---
# name: test_publish_example_twine_fails_with_already_exists
  dict({
    'exit_code': 1,
    'stderr': '''
      Publishing 1 target to https://test.pypi.org/legacy/...
      Publishing 'example-97db95eb'...
      Publish for 'example_97db95eb-0.0.0.tar.gz' already exists.
      Failed to publish 0/1 targets.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_publish_example_twine_fails_with_rate_limit
  dict({
    'exit_code': 1,
    'stderr': '''
      Publishing 1 target to https://test.pypi.org/legacy/...
      Publishing 'example-97db95eb'...
      Publish of 'example_97db95eb-0.0.0.tar.gz' failed due to rate limits.
      Failed to publish 0/1 targets.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_publish_example_twine_fails_with_unknown_error
  dict({
    'exit_code': 1,
    'stderr': '''
      Publishing 1 target to https://test.pypi.org/legacy/...
      Publishing 'example-97db95eb'...
      Publishing example_97db95eb-0.0.0.tar.gz with twine failed:
          <twine error message>
      .
      Failed to publish 0/1 targets.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_publish_example_twine_succeeds
  dict({
    'exit_code': 0,
    'stderr': '''
      Publishing 1 target to https://test.pypi.org/legacy/...
      Publishing 'example-97db95eb'...
      Published example_97db95eb-0.0.0.tar.gz in [TIME]:
      
          <twine happy message>
      
      Published 'example_97db95eb-0.0.0.tar.gz'
      Published example_97db95eb_a-1.0.0-py3-none-any.whl in [TIME]:
      
          <twine happy message>
      
      Published 'example_97db95eb_a-1.0.0-py3-none-any.whl'
      Published example_97db95eb_a-1.0.0.tar.gz in [TIME]:
      
          <twine happy message>
      
      Published 'example_97db95eb_a-1.0.0.tar.gz'
      Published example_97db95eb_b-1.0.0-py3-none-any.whl in [TIME]:
      
          <twine happy message>
      
      Published 'example_97db95eb_b-1.0.0-py3-none-any.whl'
      Published example_97db95eb_b-1.0.0.tar.gz in [TIME]:
      
          <twine happy message>
      
      Published 'example_97db95eb_b-1.0.0.tar.gz'
      Published example_97db95eb_b-2.0.0-py3-none-any.whl in [TIME]:
      
          <twine happy message>
      
      Published 'example_97db95eb_b-2.0.0-py3-none-any.whl'
      Published example_97db95eb_b-2.0.0.tar.gz in [TIME]:
      
          <twine happy message>
      
      Published 'example_97db95eb_b-2.0.0.tar.gz'
      Published example_97db95eb_b-3.0.0-py3-none-any.whl in [TIME]:
      
          <twine happy message>
      
      Published 'example_97db95eb_b-3.0.0-py3-none-any.whl'
      Published example_97db95eb_b-3.0.0.tar.gz in [TIME]:
      
          <twine happy message>
      
      Published 'example_97db95eb_b-3.0.0.tar.gz'
  
    ''',
    'stdout': '''
      example-97db95eb
  
    ''',
  })
# ---
# name: test_publish_example_twine_succeeds_parallel
  dict({
    'exit_code': 0,
    'stderr': '<not included>',
    'stdout': '''
      example-97db95eb
  
    ''',
  })
# ---
